# ny-taxi-data-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: coding-standards.md
terraform/bootstrap/: main.tf  s3.tf  variables.tf
terraform/main/: locals.tf  main.tf  variables.tf
